# research

./: .gitignore  BUGFIX_IMPLEMENTATION_REPORT.md  BUGFIX_SUMMARY.md  BUG_VERIFICATION_REPORT.md  CHANGELOG.md  CRYPTOGRAPHIC_FRAMEWORK_SECTION.txt  PERFORMANCE_IMPLEMENTATION_COMPLETE.md  PR1_IMPLEMENTATION_SUMMARY.md  PROJECT_STATUS.md  PROJECT_SUMMARY.txt  README.md  RESEARCH_PAPER_CRYPTOGRAPHIC_SECTION.txt  SCHEDULER_TEST_SUITE_SUMMARY.md  SECTION_4_CRYPTOGRAPHIC_FRAMEWORK copy 2.md  SECTION_4_CRYPTOGRAPHIC_FRAMEWORK.md  SECTION_4_CRYPTOGRAPHIC_FRAMEWORK.txt  SECTION_4_CRYPTOGRAPHIC_FRAMEWORK_SIMPLIFIED.md  TODO.txt  TOOLS_ANALYSIS.md  TOOLS_AUTO_DEEP_ANALYSIS.md  bench_models.py  clear.txt  codebase-read.txt  comparison.txt  consolidated_drone_logs.txt  context.txt  deep-research.txt  diagnose_aead.py  diagnose_handshake.py  diagrames.md  draft-v2.sty  draft.sty  environment.yml  gcs_debug.json  gcs_suites.txt  handshake.txt  import_check.py  latest-log-new.txt  log_project_structure.py  log_text_docs.py  (+38 more)
analysis/: extract_phase1_provenance.py  extract_txt_metrics.py  generate_tables.py  generate_visualizations_and_metadata.ipynb  generate_visualizations_and_metadata_executed.ipynb  mermaid_diagrams.md  narrative_sections.md  phase1_provenance_map.json  reproducibility_appendix.md
benchmarks/: matrix.yaml  run_matrix.py
core/: aead.py  async_proxy.py  config.py  handshake.py  logging_utils.py  policy_engine.py  power_monitor.py  project_config.py  project_structure_20250925_190910.txt  project_structure_20250930_102145.txt  project_structure_20251003_171850.txt  (+14 more)
(+861 files in other folders)
