[project]
name = "pqc_proxy"
version = "0.1.0"
description = "An adaptive PQC secure proxy for drone communications."
requires-python = ">=3.10"
dependencies = [
    "oqs>=0.10.0",
    "cryptography>=45.0",
    "paramiko>=3.4.0"
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-anyio"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["core*"]